# osm-rawdata

./: .dockerignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  Makefile  README.md  build_imgs.sh  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: labeler.yml
.github/workflows/: build-ci.yml  build.yml  docs.yml  publish.yml  pytest.yml  wiki.yml
CHANGELOG/: index.html
LICENSE/: index.html
about/: index.html
api/: index.html
apidocs/html/: ____version_____8py_source.html  annotated.html  classconfig_1_1QueryConfig-members.html  classconfig_1_1QueryConfig.html  classconfig_1_1QueryConfig__coll__graph.dot  classconfig_1_1QueryConfig_a1439ba6697a3f237ff28f25ada383756_cgraph.dot  classconfig_1_1QueryConfig_a391225e6ee6c7813572afd5617876a39_cgraph.dot  classconfig_1_1QueryConfig_a89a91dc7416cf844bf79a53b84e63b9d_icgraph.dot  classconfig_1_1QueryConfig_adae8f874c310c1436850eda916d1e520_icgraph.dot  classdb__models_1_1Lines.html  classdb__models_1_1Lines__inherit__graph.dot  classdb__models_1_1Nodes.html  classdb__models_1_1Nodes__coll__graph.dot  classdb__models_1_1RawData.html  classdb__models_1_1RawData__coll__graph.dot  classdb__models_1_1Ways.html  classdb__models_1_1Ways__inherit__graph.dot  classdb__schemas_1_1WayBase.html  classdb__schemas_1_1WayBase__inherit__graph.dot  classes.html  classgeofabrik_1_1GeoFabrik-members.html  classgeofabrik_1_1GeoFabrik.html  classgeofabrik_1_1GeoFabrik__inherit__graph.dot  classimporter_1_1MapImporter-members.html  classimporter_1_1MapImporter.html  classimporter_1_1MapImporter__coll__graph.dot  classmodels_1_1Base.html  classmodels_1_1Base__coll__graph.dot  classmodels_1_1Base__inherit__graph.dot  classmodels_1_1Lines.html  classmodels_1_1Lines__inherit__graph.dot  classmodels_1_1Nodes.html  classmodels_1_1Nodes__inherit__graph.dot  classmodels_1_1Ways-members.html  classmodels_1_1Ways.html  classmodels_1_1Ways__inherit__graph.dot  classoverture_1_1Overture-members.html  classoverture_1_1Overture.html  classoverture_1_1Overture__coll__graph.dot  classpgasync_1_1DatabaseAccess-members.html  (+55 more)
apidocs/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  namespaces_0.js  searchdata.js
docs/: Doxyfile  Home.md  _Sidebar.md  about.md  api.md  geofabrik.md  importer.md  index.md  json.md  overture.md  postgres.md  wiki_redirect.md  yaml.md
docs/apidocs/html/: classosm__rawdata_1_1config_1_1QueryConfig__inherit__graph.map  classosm__rawdata_1_1config_1_1QueryConfig__inherit__graph.md5  classosm__rawdata_1_1geofabrik_1_1GeoFabrik__coll__graph.map  classosm__rawdata_1_1geofabrik_1_1GeoFabrik__coll__graph.md5  inherit_graph_0.map  inherit_graph_0.md5
doxygen/html/: ____version_____8py_source.html  annotated.html  classconfig_1_1QueryConfig-members.html  classconfig_1_1QueryConfig.html  classconfig_1_1QueryConfig__coll__graph.md5  classconfig_1_1QueryConfig__inherit__graph.map  classconfig_1_1QueryConfig__inherit__graph.md5  classconfig_1_1QueryConfig_a08fb3520da0c60709afc3fe6449999f8_cgraph.map  classconfig_1_1QueryConfig_a08fb3520da0c60709afc3fe6449999f8_cgraph.md5  classconfig_1_1QueryConfig_a391225e6ee6c7813572afd5617876a39_cgraph.map  classconfig_1_1QueryConfig_a391225e6ee6c7813572afd5617876a39_cgraph.md5  classconfig_1_1QueryConfig_a89a91dc7416cf844bf79a53b84e63b9d_icgraph.map  classconfig_1_1QueryConfig_a89a91dc7416cf844bf79a53b84e63b9d_icgraph.md5  classconfig_1_1QueryConfig_a93ad1f76c27b14bf4d4568ddcf5b8b84_icgraph.map  classconfig_1_1QueryConfig_a93ad1f76c27b14bf4d4568ddcf5b8b84_icgraph.md5  classconfig_1_1QueryConfig_a9ca3eef141062bae284a521b63791ef9_icgraph.map  classconfig_1_1QueryConfig_a9ca3eef141062bae284a521b63791ef9_icgraph.md5  classconfig_1_1QueryConfig_ab58d90aa8404683998f1b029d3c6e2b0_icgraph.map  classconfig_1_1QueryConfig_ab58d90aa8404683998f1b029d3c6e2b0_icgraph.md5  classconfig_1_1QueryConfig_ae4a324b6bfce1eac378c62503a451753_icgraph.map  classconfig_1_1QueryConfig_ae4a324b6bfce1eac378c62503a451753_icgraph.md5  classdb__models_1_1Lines-members.html  classdb__models_1_1Lines.html  classdb__models_1_1Lines__coll__graph.map  classdb__models_1_1Lines__coll__graph.md5  classdb__models_1_1Lines__inherit__graph.map  classdb__models_1_1Nodes-members.html  classdb__models_1_1Nodes.html  classdb__models_1_1Nodes__coll__graph.map  classdb__models_1_1Nodes__coll__graph.md5  classdb__models_1_1RawData-members.html  classdb__models_1_1RawData.html  classdb__models_1_1RawData__coll__graph.map  classdb__models_1_1RawData__coll__graph.md5  classdb__models_1_1RawData__inherit__graph.map  classdb__models_1_1RawData__inherit__graph.md5  classdb__models_1_1Ways-members.html  classdb__models_1_1Ways.html  classdb__models_1_1Ways__coll__graph.md5  classdb__models_1_1Ways__inherit__graph.map  (+187 more)
doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  (+33 more)
geofabrik/: index.html
importer/: index.html
json/: index.html
osm_rawdata/: __version__.py  config.py  db_models.py  db_schemas.py  geofabrik.py  geofabrik.yaml  importer.py  models.py  overture.py  pgasync.py  postgres.py  raw.lua  rawdata.sql  ways_line.sql
osm_rawdata/db/: postgres.py
osm_rawdata/import/: README.md  nodes.sql  raw.lua  ways_poly.sql
overture/: index.html
postgres/: index.html
search/: search_index.json
tests/: AOI.geojson  AOI_small.geojson  __init__.py  all_geometry.yaml  buildings.yaml  buildings_no_join.yaml  conftest.py  everything.json  filters.json  formats.json  geometry.json  levels.json  test1.json  test_config.py  test_everything.py  test_json.py  test_output.py  test_postgres.py  test_uriparser.py
wiki_redirect/: index.html
yaml/: index.html
(+6 files in other folders)
